use my test dataset, use ewma, use rotating down, meet the problem

--- a/LSTM-2steps-gru=1-select_parameters.ipynb
+++ b/LSTM-2steps-gru=1-select_parameters.ipynb
@@ -1053,16 +1053,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'LSTM-2steps-gru=1-dev.ipynb'"
+       "'LSTM-2steps-gru=1-select_parameters.ipynb'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,16 +1075,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'LSTM-2steps-gru=1-dev.py'"
+       "'LSTM-2steps-gru=1-select_parameters.py'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
     }
    ],
    "source": [
-    "#bench hhidden\n",
+    "#bench lr\n",
     "bench_cmd = \"\"\"\n",
     "for i in %s; do \\\n",
     "    python3 %s \\\n",
@@ -1391,10 +1391,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "for i in 200 400 600 800 1000 1200 1400 1600 1800 2000 2200 2400 2600 2800 3000 3200 3400 3600 3800; do     python3 LSTM-2steps-gru=1-select_parameters.py     --bsize $i --training_iterate_dataset_times 200    2> full_bench.err     | tee -a full_bench.log     | grep -e \"^RESULT\" | cut -c 8-     | tee -a bench.log; done\n",
+      "\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "#bench batch size\n",
+    "bench_cmd = \"\"\"\n",
+    "for i in %s; do \\\n",
+    "    python3 %s \\\n",
+    "    --bsize $i --training_iterate_dataset_times 200\\\n",
+    "    2> full_bench.err \\\n",
+    "    | tee -a full_bench.log \\\n",
+    "    | grep -e \"^RESULT\" | cut -c 8- \\\n",
+    "    | tee -a bench.log; \\\n",
+    "done\n",
+    "\"\"\" % (\" \".join(map(str, range(200, 4000, 200))), pyname)\n",
+    "print(bench_cmd)\n",
+    "get_ipython().system(\"bash -c '\" + bench_cmd + \"'\")"
+   ]
   },
   {
    "cell_type": "code",
